chore: miscellaneous minor fixes
